--- a/src/GUI/View_Profile.form
+++ b/src/GUI/View_Profile.form
@@ -3,9 +3,6 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
-    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[746, 454]"/>
-    </Property>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -67,82 +64,202 @@
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="46" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="68" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" attributes="0">
-                              <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace min="-2" pref="64" max="-2" attributes="0"/>
-                              <Component id="jLabel7" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                          <Group type="102" alignment="0" attributes="0">
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="jLabel6" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Component id="jLabel5" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="labelAlamat6" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Group type="103" alignment="0" groupAlignment="0" attributes="0">
+                              <Group type="102" alignment="1" attributes="0">
+                                  <Group type="103" groupAlignment="0" attributes="0">
+                                      <Component id="labelNama" alignment="0" min="-2" max="-2" attributes="0"/>
+                                      <Component id="labelTgl" alignment="0" min="-2" max="-2" attributes="0"/>
+                                      <Component id="labelProv" alignment="0" min="-2" max="-2" attributes="0"/>
+                                      <Component id="labelKota" alignment="0" min="-2" max="-2" attributes="0"/>
+                                      <Component id="labelKecamatan" min="-2" max="-2" attributes="0"/>
+                                  </Group>
+                                  <EmptySpace pref="4" max="-2" attributes="0"/>
                               </Group>
-                              <EmptySpace type="separate" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="jLabel9" min="-2" max="-2" attributes="0"/>
-                                  <Component id="jLabel8" min="-2" max="-2" attributes="0"/>
+                              <Group type="102" alignment="0" attributes="0">
+                                  <Component id="labelAlamat4" min="-2" max="-2" attributes="0"/>
+                                  <EmptySpace pref="66" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
-                      <EmptySpace pref="541" max="32767" attributes="0"/>
+                      <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Group type="103" alignment="1" groupAlignment="0" max="-2" attributes="0">
+                                  <Component id="inputKota" min="-2" pref="461" max="-2" attributes="0"/>
+                                  <Component id="inputTtlProfil" min="-2" pref="461" max="-2" attributes="0"/>
+                                  <Component id="inputNamaProfil" min="-2" pref="461" max="-2" attributes="0"/>
+                                  <Group type="102" alignment="0" attributes="0">
+                                      <Group type="103" groupAlignment="0" attributes="0">
+                                          <Component id="inputProvinsi" alignment="0" min="-2" pref="175" max="-2" attributes="0"/>
+                                          <Component id="inputRT" alignment="0" min="-2" pref="175" max="-2" attributes="0"/>
+                                      </Group>
+                                      <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
+                                      <Group type="103" groupAlignment="0" attributes="0">
+                                          <Group type="102" attributes="0">
+                                              <Component id="labelAlamat5" min="-2" max="-2" attributes="0"/>
+                                              <EmptySpace min="-2" pref="58" max="-2" attributes="0"/>
+                                              <Component id="inputRW" min="-2" pref="175" max="-2" attributes="0"/>
+                                          </Group>
+                                          <Group type="103" groupAlignment="0" attributes="0">
+                                              <Component id="labelKelurahan" min="-2" max="-2" attributes="0"/>
+                                              <Group type="102" attributes="0">
+                                                  <Component id="labelKabKot" min="-2" max="-2" attributes="0"/>
+                                                  <EmptySpace max="32767" attributes="0"/>
+                                                  <Component id="inputKabKot" min="-2" pref="175" max="-2" attributes="0"/>
+                                              </Group>
+                                          </Group>
+                                      </Group>
+                                  </Group>
+                              </Group>
+                              <Group type="102" alignment="1" attributes="0">
+                                  <Component id="inputKecamatan" min="-2" pref="175" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="111" max="-2" attributes="0"/>
+                                  <Component id="inputKelurahan" min="-2" pref="175" max="-2" attributes="0"/>
+                              </Group>
+                          </Group>
+                          <Group type="102" attributes="0">
+                              <Component id="inputNoRumah" min="-2" pref="175" max="-2" attributes="0"/>
+                              <EmptySpace max="32767" attributes="0"/>
+                              <Component id="btnUpdate" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                      </Group>
+                      <EmptySpace pref="67" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jLabel7" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="labelNama" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="inputNamaProfil" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="jLabel6" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jLabel8" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="labelKota" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="inputKota" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jLabel9" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="labelTgl" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="inputTtlProfil" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="264" max="32767" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="labelProv" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="inputProvinsi" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="labelKabKot" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="inputKabKot" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="labelKecamatan" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="inputKecamatan" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="inputKelurahan" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="labelKelurahan" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="labelAlamat4" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="inputRT" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="inputRW" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="labelAlamat5" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="103" groupAlignment="3" attributes="0">
+                              <Component id="labelAlamat6" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="inputNoRumah" alignment="3" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <Component id="btnUpdate" alignment="0" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace pref="68" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
           </Layout>
           <SubComponents>
-            <Component class="javax.swing.JLabel" name="jLabel1">
+            <Component class="javax.swing.JLabel" name="labelNama">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Nama:"/>
+                <Property name="text" type="java.lang.String" value="Nama :"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JLabel" name="jLabel5">
+            <Component class="javax.swing.JLabel" name="labelProv">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Alamat:"/>
+                <Property name="text" type="java.lang.String" value="Provinsi :"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JLabel" name="jLabel6">
+            <Component class="javax.swing.JLabel" name="labelTgl">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Tanggal Lahir:"/>
+                <Property name="text" type="java.lang.String" value="Tanggal Lahir :"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JLabel" name="jLabel7">
+            <Component class="javax.swing.JTextField" name="inputNamaProfil">
+            </Component>
+            <Component class="javax.swing.JTextField" name="inputTtlProfil">
+            </Component>
+            <Component class="javax.swing.JTextField" name="inputProvinsi">
+            </Component>
+            <Component class="javax.swing.JLabel" name="labelKota">
               <Properties>
-                <Property name="text" type="java.lang.String" value="......."/>
+                <Property name="text" type="java.lang.String" value="Kota Lahir :"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JLabel" name="jLabel8">
+            <Component class="javax.swing.JTextField" name="inputKota">
+            </Component>
+            <Component class="javax.swing.JLabel" name="labelKabKot">
               <Properties>
-                <Property name="text" type="java.lang.String" value="......."/>
+                <Property name="text" type="java.lang.String" value="Kab/Kota :"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JLabel" name="jLabel9">
+            <Component class="javax.swing.JTextField" name="inputKabKot">
+            </Component>
+            <Component class="javax.swing.JLabel" name="labelKecamatan">
               <Properties>
-                <Property name="text" type="java.lang.String" value="......."/>
+                <Property name="text" type="java.lang.String" value="Kecamatan :"/>
               </Properties>
+            </Component>
+            <Component class="javax.swing.JTextField" name="inputKecamatan">
+            </Component>
+            <Component class="javax.swing.JLabel" name="labelKelurahan">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Kelurahan :"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JTextField" name="inputKelurahan">
+            </Component>
+            <Component class="javax.swing.JLabel" name="labelAlamat4">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="RT :"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JTextField" name="inputRT">
+            </Component>
+            <Component class="javax.swing.JLabel" name="labelAlamat5">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="RW :"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JTextField" name="inputRW">
+            </Component>
+            <Component class="javax.swing.JLabel" name="labelAlamat6">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Nomor Rumah :"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JTextField" name="inputNoRumah">
+            </Component>
+            <Component class="javax.swing.JButton" name="btnUpdate">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Update"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnUpdateActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
@@ -286,7 +403,7 @@
                           </Group>
                           <Component id="jLabel3" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="448" max="32767" attributes="0"/>
+                      <EmptySpace pref="451" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
