--- a/src/GUI/Login.form
+++ b/src/GUI/Login.form
@@ -72,6 +72,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="UsernameField">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="UsernameFieldActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
