--- a/src/View/ViewLogin.form
+++ b/src/View/ViewLogin.form
@@ -33,8 +33,8 @@
               <EmptySpace pref="37" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="UsernameField" max="32767" attributes="0"/>
-                      <Component id="PasswordField" pref="220" max="32767" attributes="0"/>
+                      <Component id="inputUsername" max="32767" attributes="0"/>
+                      <Component id="inputPassword" pref="220" max="32767" attributes="0"/>
                   </Group>
                   <Component id="jButton1" min="-2" pref="105" max="-2" attributes="0"/>
               </Group>
@@ -47,13 +47,13 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="72" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="UsernameField" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="inputUsername" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="PasswordField" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="inputPassword" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="53" max="-2" attributes="0"/>
               <Component id="jButton1" min="-2" max="-2" attributes="0"/>
@@ -71,9 +71,9 @@
         <Property name="text" type="java.lang.String" value="Username : "/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="UsernameField">
+    <Component class="javax.swing.JTextField" name="inputUsername">
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="UsernameFieldActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="inputUsernameActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
@@ -84,7 +84,7 @@
         <Property name="text" type="java.lang.String" value="Password :"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="PasswordField">
+    <Component class="javax.swing.JTextField" name="inputPassword">
     </Component>
     <Component class="javax.swing.JButton" name="jButton1">
       <Properties>
